--- a/themes/cool/css/style-dark.css
+++ b/themes/cool/css/style-dark.css
@@ -6780,11 +6780,16 @@ p {
 }
 .kmom-frame {
   display: flex;
+  width: 100%;
 }
 
 .kmom-links,
 .kmom-content {
   padding: 1em;
+}
+
+.kmom-content {
+  width: 100%;
 }
 
 .kmom-links {
@@ -6802,6 +6807,23 @@ p {
 
 .analysis-table td {
   border: 2px solid #fff;
+}
+
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 @media (max-width: 767px) {
@@ -6844,8 +6866,13 @@ p {
   text-decoration-color: #fff;
 }
 
+.excel {
+  width: 100%;
+}
+
 .gallery {
   display: grid;
+  grid-template-columns: repeat(3, 1fr);
   gap: 1em;
 }
 .gallery h1 {
@@ -6855,23 +6882,28 @@ p {
 }
 
 .image {
-  margin-left: 1em;
-  margin-top: 1em;
-  margin-right: 1em;
-  margin-bottom: 1em;
-  box-shadow: 8px 8px 10px 6px rgba(190, 190, 190, 0.3);
+  box-shadow: 6px 6px 10px 6px rgba(190, 190, 190, 0.2);
   grid-column: span 1;
+  margin: 1em;
 }
 
 @media (max-width: 992px) {
-  .image,
-.gallery h1 {
+  .gallery {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .gallery h1 {
+    text-align: center;
     grid-column: span 2;
+    justify-self: center;
   }
 }
 @media (max-width: 767px) {
-  .image,
-.gallery h1 {
+  .gallery {
+    grid-template-columns: 1fr;
+  }
+  .gallery h1 {
+    text-align: center;
     grid-column: span 1;
+    justify-self: center;
   }
 }
