--- a/themes/cool/scss/kmom.scss
+++ b/themes/cool/scss/kmom.scss
@@ -1,10 +1,15 @@
 .kmom-frame {
     display: flex;
+    width: 100%;
 }
 
 .kmom-links,
 .kmom-content {
     padding: 1em;
+}
+
+.kmom-content {
+    width: 100%;
 }
 
 .kmom-links {
@@ -22,6 +27,24 @@
 
 .analysis-table td {
     border: 2px solid $link-colour;
+}
+
+.embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    
+    iframe,
+    object,
+    embed {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 @media (max-width: 767px) {
